@@ -1,922 +1,26 @@
 # Java基础知识图谱
 
-## JVM
-
-### 内存区域
-
-#### 运行时数据区
-
-##### 程序计数器
-
-###### 线程私有
-
-###### 当前线程所执行的字节码的行号指示器
-
-###### OOM: 无
-
-##### JVM 栈
-
-###### 线程私有
-
-###### 存储局部变量表、操作数栈、方法出口
-
-###### StackOverflowError
-
-###### OOM: 动态扩展时无法申请到足够内存
-
-如果`-Xss`设置过大，当创建大量线程时可能OOM.
-（每个线程都会创建一个栈）
-
-###### 栈桢 Stack Frame
-
-####### 局部变量表
-
-######## 存放方法参数、方法内定义的局部变量
-
-######## 容量以slot为最小单位
-
-######## 为了尽可能节省栈桢空间，局部变量表中的slot可以重用
-
-######## 局部变量无“准备阶段”，无初始值
-
-####### 操作数栈
-
-######## 存放算术运算操作数、调用其他方法的参数
-
-####### 动态连接
-
-####### 返回地址
-
-######## 正常完成出口 -Normal Method Invocation Completion
-
-######## 异常完成出口 -Abrupt Method Invocation Completion
-
-######## 方法退出时的操作
-
-######### 回复上层方法的局部变量表、操作数栈
-
-######### 把返回值压入调用者栈桢的操作数栈
-
-######### 调整PC寄存器的值，指向方法调用指令后面的一条指令
-
-##### 本地方法栈
-
-##### 方法区
-
-###### 线程共享
-
-###### 存储类信息、常量、静态变量、运行时常量(String.intern)
-
-###### GC: 回收常量池、卸载类型
-
-###### OOM: String.intern，CGLib
-
-- 例如大量String.intern()
-- 用CGLib生成大量动态类
-- OSGi应用
-- 大量JSP的应用 （JSP第一次运行需要便以为Javale）
-`-XX:PermSize` `-XX:MaxPermSize`
-
-##### 堆
-
-###### 线程共享
-
-###### 存储对象实例、数组
-
-###### OOM
-
-`-Xms` `-Xmx`
-
-##### 直接内存(堆外内存)
-
-###### NIO DirectByteBuffer
-
-###### OOM
-
-`-XX:MaxDirectMemorySize`
-
-#### 其他
-
-##### Direct Memory
-
-###### 创建
-
-####### NIO可能会操作堆外内存：Buffer.isDirect()
-
-####### FileChannel.map()创建MappedByteBuffer
-
-将文件按照指定大小直接映射为内存区域，
-
-###### 场景
-
-####### 创建和销毁开销大
-
-####### 适用于场景使用、数据较大的场景
-
-###### 回收
-
-####### -XX:MaxDirectMemorySize
-
-####### -XX:NativeMemoryTracking={summary|detail}
-
-####### 回收：FullGC时顺便清理，不能主动触发
-
-####### 异常OutOfMemoryError: Direct buffer memory
-
-##### 线程堆栈
-
-###### 纵向异常：无法分配新的栈桢：StackOverflowError
-
-###### 横向异常：无法建立新的线程：OutOfMemoryError: unable to create new native thread
-
-##### Socket缓存区
-
-##### JNI代码
-
-##### 虚拟机和GC
-
-### 对象
-
-#### 创建
-
-##### 在常量池找类的符号引用
-
-##### 类加载 Loading
-
-加载，是指查找字节流，并且据此创建类的过程
-
-###### 启动类加载器 Bootstrap Classloader
-
-加载 jre/lib
-
-####### 如何替换基础类库实现：-Xbootclasspath
-
-###### 扩展类加载器 Extension Classloader
-
-加载jre/lib/ext
-
-
-Java9改名为平台类加载器
-
-
-####### 如何替换扩展类库实现：-Djava.ext.dirs=
-
-###### 应用类加载器 Application Classloader
-
-##### 链接 Linking
-
-把原始的类定义信息 平滑地转入JVM运行的过程
-
-###### 验证 Verification
-
-确保被加载类能够满足 Java 虚拟机的约束条件；否则抛出`VerifyError`
-
-###### 准备 Preparation
-
-为被加载类的`静态字段`分配内存
-
-###### 解析 Resolution
-
-将常量池中的符号引用解析成为直接引用
-
-##### 初始化 Initialization 
-
-为标记为常量值的字段赋值，以及执行 < clinit > 方法
-
-类的初始化仅会被执行一次，这个特性被用来实现单例的延迟初始化
-
-###### 常量值赋值
-
-###### 执行clinit方法（静态代码块）
-
-###### 初始化仅会被执行一次：单例
-
-##### 分配内存
-
-###### 指针碰撞：适用于Compact GC，例如Serial, ParNew
-
-当内存规整时适用
-
-
-###### 空闲列表：适用于Mark-Sweep GC，例如CMS
-
-当内存不连续时适用
-
-
-###### 并发问题
-
-####### CAS
-
-####### TLAB: Thread Local Allocation Buffer
-
-本地线程分配缓冲：每个线程在堆中预先分配一小块内存。
-
-#### 编译：将字节码翻译成机器码
-
-##### 编译器
-
-###### 解释执行
-
-###### JIT (Just in Time Compilation)
-
-####### 即时编译，在运行时将热点代码编译成机器码
-
-###### AOT (Ahead of Time Compilation) 
-
-####### 避免JIT预热开销
-
-##### 参数
-
-###### -Xint: 仅解释执行
-
-###### -Xcomp: 关闭解释器，最大优化级别；会导致启动变慢
-
-#### 结构
-
-##### Header
-
-###### Mark Word
-
-- HashCode
-- GC分代年龄
-- 锁状态标志
-- 线程持有的锁
-- 偏向线程ID
-- 偏向时间戳
-
-###### 类型指针
-
-JVM通过这个指针来确定对象是哪个类的实例
-
-
-##### Instance Data
-
-##### Padding
-
-##### 类文件结构
-
-###### 魔数、版本号
-
-###### 常量池
-
-####### 字面量
-
-####### 符号引用
-
-- 类和接口的 全限定名
-- 字段名和描述符
-- 方法名和描述符
-
-###### 访问标志
-
-- 类 or 接口
-- public?
-- abstract?
-- 
-final?
-
-###### 类的继承关系：this_class, super_class, interfaces
-
-###### 字段表集合
-
-- access_flag
-- name_index: 简单名称，指向常量池
-- descriptor_index: 描述符。字段数据类型，方法参数列表、返回值
-- attributes: 属性表
-
-
-###### 方法表集合
-
-- 类似字段表集合；
-- 方法体存放在`Code`shu'xing'l
-
-#### 字节码指令
-
-##### Opcode 操作码  + Operands 操作数
-
-##### load 加载指令：将一个局部变量加载到操作栈
-
-##### store 存储指令：将一个数值从操作数栈 存储到局部变量表
-
-##### 运算指令：iadd, isub, ladd, lsub
-
-##### 类型转换指令：i2b, d2f
-
-##### 对象创建与访问指令：new, newarray, getfield
-
-##### 操作数栈管理指令：pop, swap
-
-##### 控制转移指令
-
-##### 方法调用和返回指令
-
-###### invokestatic
-
-####### 调用静态方法
-
-###### invokespecial
-
-####### 调用 实例构造器、私有方法、父类方法
-
-###### invokevirtual
-
-####### 调用所有的虚方法
-
-###### invokeinterface
-
-####### 调用接口方法
-
-###### invokedynamic
-
-####### 在运行时动态解析出调用点限定符所引用的方法
-
-###### ireturn
-
-##### 异常处理指令：athrow
-
-##### 同步指令：monitorenter, monitorexit
-
-#### 方法调用
-
-##### 变量类型
-
-###### 静态类型 Father f =
-
-###### 实际类型 f = new Son()
-
-##### 静态分派
-
-###### 典型应用：方法重载
-
-###### 依赖静态类型来定位方法
-
-##### 动态分派
-
-###### 典型应用：方法重写
-
-###### 依赖实际类型来定位方法
-
-#### 类加载
-
-##### 生命周期
-
-###### 加载 Loading
-
-- 根据全限定名来获取二进制字节流 `Class Loader`；
-- 将字节流所代表的静态存储结构转化为方法区的运行时数据结构；
-- 生成java.lang.Class对象
-
-注意：数组类本身不通过类加载器创建，而是有JVM直接创建。
-
-###### 连接 Linking
-
-####### 验证 Verification
-
-- 文件格式验证：
-魔数开头、版本号、可能抛出`VerifyError`
-
-- 元数据验证：
-是否有父类、是否实现了接口中要求的方法
-
-- 字节码验证：
-通过数据流和控制流分析，确定程序语义是否合法
-
-- 符号引用验证：
-在讲符号引用转化为直接引用时进行（解析阶段），可能抛出`IllegalAccessError`, `NoSuchFieldError`, `NoSuchMethodError`
-
-####### 准备 Preparation
-
-在方法区中，为类变量分配内存，并设置初始值。
-
-####### 解析 Resolution
-
-将常量池中的`符号引用` 替换为 `直接引用`
-
-###### 初始化 Initialization
-
-初始化是执行类构造器<clinit>()方法的过程。
-- clinit包括类变量赋值动作、静态语句块。
-- clinit保证多线程环境中被加锁、同步 >> 可用来实现单例  
-
-5中情况必须立即对类进行初始化：
-- new, getstatic
-- 反射调用
-- 先触发父类初始化
-- main
-- java7 REF_getStatic ??
-
-反例：
-- `SubClass.staticValue` 通过子类引用父类静态字段，子类不会被初始化
-- `MyClass[]` 通过数组定义来引用类，不会触发类初始化
-- `MyCalss.CONSTANT_VALUE` 引用常量，不会触发类初始化
-
-
-###### 使用 Using
-
-###### 卸载 Unloading
-
-##### 双亲委派模型
-
-###### 类加载器
-
-####### Bootstrap ClassLoader
-
-/li
-
-####### Extension ClassLoader
-
-/lib/ext
-
-####### Application ClassLoader
-
-classpath
-
-
-
-####### 自定义：重写findClass, 而非loadClass
-
-###### 被破坏
-
-####### jdk1.2之前
-
-####### JNDI等SPI框架需要加载classpath代码
-
-####### OSGi: 网状
-
-##### 异常
-
-###### ClassNotFoundException
-
-####### 当动态加载Class的时候找不到类会抛出该异常
-
-####### 一般在执行Class.forName()、ClassLoader.loadClass()或ClassLoader.findSystemClass()的时候抛出
-
-###### NoClassDefFoundError
-
-####### 编译成功以后，执行过程中Class找不到
-
-####### 由JVM的运行时系统抛出
-
-### GC
-
-#### 引用类型
-
-##### 种类
-
-###### 强引用 Strong Reference
-
-###### 软引用 SoftReference
-
-####### 发生内存溢出之前，会尝试回收
-
-####### 应用场景：可用于实现内存敏感的缓存
-
-###### 弱引用 WeakReference
-
-####### 下一次垃圾回收之前，一定会被回收
-
-####### 可用来构建一种没有特定约束的关系，例如维护非强制性的映射关系
-
-####### 应用场景：缓存
-
-###### 虚引用 PhantomReference 
-
-####### 不能通过它访问对象
-
-######## 需要配合ReferenceQueue使用
-
-```java
-Object counter = new Object();
-ReferenceQueue refQueue = new ReferenceQueue<>();
-
-PhantomReference<Object> p = new PhantomReference<>(counter, refQueue);
-
-counter = null;
-System.gc();
-
-try {
-    // Remove获取对象。
-    // 可以指定 timeout，或者选择一直阻塞
-    Reference<Object> ref = refQueue.remove(1000L);
-    if (ref != null) {
-        // do something
-    }
-} catch (InterruptedException e) { }
-
-```
-
-####### 虚引用仅提供一种确保对象被finalize后做某些事的机制
-
-####### finalize 之后会变成虚引用
-
-####### 应用场景：跟踪对象被垃圾回收器回收的活动
-
-##### 实践
-
-###### -XX:+PrintReferenceGC 打印各种引用数量
-
-###### Reference.reachabilityFence(this)
-
-####### 声明对象强可达
-
-```java
-class Resource {
-
- public void action() {
- try {
-     // 需要被保护的代码
-     int i = myIndex;
-     Resource.update(externalResourceArray[i]);
- } finally {
-     // 调用 reachbilityFence，明确保障对象 strongly reachable
-     Reference.reachabilityFence(this);
- }
- 
- 
- // 调用
- new Resource().action();
-
-```
-
-#### GC回收判断
-
-##### 引用计数法
-
-###### 无法解决循环引用问题
-
-##### 可达性分析
-
-###### GC Roots
-
-####### 虚拟机栈中，本地变量表引用的对象
-
-####### 本地方法栈中，JNI引用的对象
-
-####### 方法区中，类静态属性引用的对象
-
-####### 方法区中，常量引用的对象
-
-#### GC算法
-
-##### 标记清除 Mark-Sweep
-
-- 标记出所有需要回收的对象
-- 标记完成后统一回收被标记的对象
-
-
-###### 效率问题
-
-###### 空间问题
-
-##### 复制算法 Copying
-
-- 将可用内存划分为两块；
-- 当一块用完时，将存活对象复制到另一块内存
-
-
-###### 问题：内存使用率
-
-###### 适用：存活率低的场景
-
-###### 例子：Eden + 2 Suvivor
-
-##### 标记整理 Mark-Compact
-
-- 标记出所有需要回收的对象
-- 让所有存活对象都向一端移动	
-
-###### 例子：老年代
-
-#### GC收集器
-
-##### 实现
-
-###### 枚举根节点
-
-- 会发生停顿
-- OopMap: 虚拟机知道哪些地方存放着对象引用
-
-###### 安全点
-
-程序执行时，只有达到安全点时才能暂停：
-- 方法调用
-- 循环跳转
-- 异常跳转
-
-
-####### 抢先式中断
-
-少用。
-- 先中断全部线程
-- 如果发现有线程中断的地方不在安全点上，则恢复线程
-
-
-####### 主动式中断
-
-- GC简单地设置一个标志
-- 线程执行时主动轮询这个标志，当为真时则自己中断挂起
-
-###### 安全区域
-
-在一段代码片段中，引用关系不会发生变化，在这个区域中任意地方开始GC都是安全的。
-
-##### Serial (Serial Old)
-
-###### Stop The World
-
-###### 新生代：复制算法
-
-###### 老年代：标记整理
-
-##### ParNew
-
-###### 新生代：多个GC线程
-
-###### 其余和Serial一致，STW
-
-##### Parallel Scavenge (Parallel Old)
-
-###### 目标：吞吐量；而其他算法关注缩短停顿时间
-
-###### GC停顿时间会牺牲吞吐量和新生代空间
-
-###### 适合后台运算任务，不需要太多的交互
-
-###### 可设置MaxGCPauseMillis, GCTimeRatio
-
-###### 其余类似ParNew
-
-##### CMS, Concurrent Mark Sweep
-
-###### 目标：减少回收停顿时间
-
-###### 标记清除算法（其他收集器用标记整理）
-
-###### 步骤
-
-####### 1.初始标记 (单线程，STW)
-
-- Stop The World
-- 标记GC roots直接关联到的对象
-
-####### 2.并发标记 (单线程，并发)
-
-- 耗时长，但与用户线程一起工作
-- GC Roots Tracing 可达性分析
-
-####### 3.重新标记 (多线程，STW)
-
-- Stop The World
-- 修正上一步并发标记期间发生变动的对象
-
-####### 4.并发清除 (单线程，并发)
-
-- 与用户线程一起工作
-
-###### 缺点
-
-####### CPU资源敏感，吞吐量会降低
-
-并发阶段会占用线程
-
-####### 无法处理浮动垃圾，可能Concurrent Mode Failure
-
-- CMS不能等到老年代几乎满时再收集，要预留空间给浮动垃圾；
-- 否则会导致预留的内存无法满足程序需要，出现Concurrent Mode Failure，临时启用Serial Old收集，停顿时间长。  
-
-`CMSInitiatingOccupancyFraction`不宜过高
-
-####### 标记清除，产生内存碎片
-
-##### G1
-
-###### 特点
-
-####### 并行与并发
-
-####### 分代收集
-
-G1将堆划分为大小相等的`Region`，新生代和老年代不再是物理隔离的
-
-####### 空间整合 -标记整理
-
-####### 可预测的停顿
-
-允许使用者明确指定M毫秒内GC时间不得超过N毫秒
-
-###### 步骤
-
-####### 1.初始标记 (单线程，STW)
-
-####### 2.并发标记 (单线程，并发)
-
-- 耗时长，但与用户线程一起工作
-- GC Roots Tracing 可达性分析
-
-####### 3.最终标记 (多线程，STW)
-
-####### 4.筛选回收 (多线程)
-
-#### 内存分配策略
-
-##### 对象优先在Eden分配
-
-如果Eden空间不足，则出发MinorGC
-
-
-##### 大对象直接进入老年代
-
-PretenureSizeThreshold
-
-##### 长期存活的对象进入老年代
-
-MaxTenuringThreshold
-
-##### 动态对象年龄判断
-
-如果Survivor中相同年龄对象的总大小 > Survivor的一半；则该年龄及更老的对象 直接进入lao'nian'dai
-
-##### 空间分配担保: 可能触发FullGC
-
-- MinorGC之前，检查老年代最大可用的连续空间，是否大于新生代所有对象总空间。如果大于，则MinorGC是安全的。
-- 否则要进行一次FullGCC.
-
-### 工具
-
-#### 命令行工具
-
-##### jps -l
-
-##### jstat -class/-gc
-
-jstat -gc vmid [interval] [count]
-
-- class
-- gc
-- gccause
-
-
-
-##### jinfo: 查看修改VM参数
-
-修改参数：
-- jinfo -flag name=value
-- jinfo -flag[+|-] name
-
-##### jmap: 生成heap dump
-
-jmap -dump:live,format=b,file=/pang/logs/tomcat/heapdump.bin 1
-
-##### jhat: 简单分析heap dump 
-
-##### jstack -l: 生成thread dump
-
-###### 分析死锁：找到BLOCKED的线程
-
-##### jcmd
-
-`jcmd 1 GC.heap_dump ${dump_file_name}`
-
-JFR.stop
-JFR.start
-JFR.dump
-JFR.check
-
-ManagementAgent.stop
-ManagementAgent.start_local
-ManagementAgent.start
-
-GC.rotate_log
-Thread.print
-GC.class_stats
-GC.class_histogram
-GC.heap_dump
-GC.run_finalization
-GC.run
-
-VM.uptime
-VM.flags
-VM.system_properties
-VM.command_line
-VM.version
-VM.check_commercial_features
-VM.unlock_commercial_features
-VM.native_memory detail 
-VM.native_memory baseline
-VM.native_memory detail.diff
-
-help
-
-##### javap: 分析class文件字节码
-
-`javap -verbose TestClass`
-
-#### GUI工具
-
-##### jconsole
-
-查看MBean
-
-
-###### 内存：jstat
-
-###### 线程：jstack
-
-##### VisualVM
-
-###### 插件
-
-###### 监视：dump
-
-###### Profiler
-
-####### CPU
-
-####### 内存
-
-###### BTrace
-
-#### instrument
-
-##### ClassFileTransformer
-
-##### Instrumentation
-
-### 参数
-
-#### 运维
-
-##### -XX:+HeapDumpOnOutOfMemoryError
-
-##### -Xverify:none -忽略字节码校验
-
-##### -Xint -禁止JIT编译器
-
-#### 内存
-
-##### -XX: SurvivorRatio
-
-##### -XX:MaxTenuringThreshold
-
-##### -XX:+AlwaysTenure -去掉Suvivor空间
-
-##### -Xms -最小堆
-
-##### -Xmx -最大堆
-
-##### -Xmn -新生代
-
-##### -Xss -栈内存大小
-
-##### -XX:PermSize  -XX:MaxPermSize
-
-##### -XX:MaxDirectMemorySize -直接内存
-
-#### GC
-
-##### -XX:+DisableExplicitGC -忽略System.gc()
-
-##### -XX:+PrintGCApplicationStoppedTime
-
-##### -XX:+PrintGCDateStamps
-
-##### -XX:+PrintReferenceGC 打印各种引用数量
-
-##### -Xloggc:xx.log
-
-##### -XX:NativeMemoryTracking={summary|detail}
-
-#### 并发
-
-##### -XX:-UseBiasedLocking 关闭偏向锁
-
 ## Core Java
 
 ### Exception
 
 #### 分类
 
-##### Throwable
+- Throwable
 
-##### Error
+- Error
 
-###### 无需捕获
+  无需捕获，例如 `OutOfMemoryError`
 
-###### 例如OutOfMemoryError
+- Exception
 
-##### Exception
+  - Checked Exception
 
-###### Checked Exception
+    可检查异常，强制要求捕获；例如 `IOException`
 
-####### 可检查异常，强制要求捕获
+  - Unchecked Exception
 
-####### 例如 IOException
-
-###### Unchecked Exception
-
-####### 运行时异常，不强制要求捕获
-
-####### 例如NPE, ArrayIndexOutOfBoundsException
+    运行时异常，不强制要求捕获；例如`NPE`, `ArrayIndexOutOfBoundsException`
 
 #### 最佳实践
 
@@ -928,11 +32,25 @@ help
 
 ###### 重新抛出，在更高层面 有了清晰业务逻辑后，决定合适的处理方式
 
+##### 构造异常时，包装老异常
+
+###### 严禁 new RuntimeExcpetion() ，无参数！
+
 #### 问题
 
 ##### try-catch 会产生额外的性能开销
 
 ##### 创建Exception对象会对栈进行快照，耗时
+
+##### finally 中抛出异常
+
+###### 会覆盖try中的主异常！
+
+###### 建议
+
+####### try-with-resouces
+
+####### 或在 finally 中捕获异常，并用e.addSuppressed()将其附加到主异常上
 
 #### 典型题目
 
@@ -947,6 +65,18 @@ help
 ###### NoClassDefFoundError
 
 ####### 编译的时候存在，但运行时却找不到
+
+##### NoSuchMethod
+
+###### NoSuchMethodException
+
+####### 通过反射，找不到方法
+
+###### NoSuchMethodError
+
+####### jar类冲突时，可能引入非预期的版本使得方法签名不匹配
+
+####### 或者字节码修改框架（ASM）动态创建或修改类时，修改了方法签名
 
 ### Immutable Class
 
@@ -970,7 +100,7 @@ help
 
 ####### implements InvocationHandler
 
-```java
+```
 class MyInvocationHandler implements InvocationHandler {
   private Object target;
     
@@ -987,11 +117,12 @@ class MyInvocationHandler implements InvocationHandler {
 
 ####### 实现接口
 
-```java
+```
 interface Hello {
     void sayHello();
 }
-class HelloImpl implements  Hello {
+
+class HelloImpl implements Hello {
     @Override
     public void sayHello() {
         System.out.println("Hello World");
@@ -1004,7 +135,7 @@ class HelloImpl implements  Hello {
 
 ####### Proxy.newProxyInstance
 
-```java
+```
 HelloImpl hello = new HelloImpl();
 
 MyInvocationHandler handler = new MyInvocationHandler(hello);
@@ -1037,23 +168,205 @@ proxyHello.sayHello();
 https://mailinator.blogspot.com/2009/06/beautiful-race-condition.html
 
 ```java
-1:  // Transfer method in java.util.HashMap -
-2:  // called to resize the hashmap
-3:  
-4:  for (int j = 0; j < src.length; j++) {
-5:    Entry e = src[j];
-6:    if (e != null) {
-7:      src[j] = null;
-8:      do {
-9:      Entry next = e.next; 
-10:     int i = indexFor(e.hash, newCapacity);
-11:     e.next = newTable[i];
-12:     newTable[i] = e;
-13:     e = next;
-14:   } while (e != null);
-15:   }
-16: } 
+// Transfer method in java.util.HashMap -
+// called to resize the hashmap
+ 
+for (int j = 0; j < src.length; j++) {
+  Entry e = src[j];
+  if (e != null) {
+    src[j] = null;
+    do {
+      Entry next = e.next; 
+      int i = indexFor(e.hash, newCapacity);
+     e.next = newTable[i];
+     newTable[i] = e;
+     e = next;
+   } while (e != null);
+  }
+} 
 ```
+
+##### 哈希冲突
+
+###### 开放地址法
+
+###### 再哈希函数法
+
+###### 链地址法
+
+##### put()
+
+```java
+public V put(K key, V value) {
+  return putVal(hash(key), key, value, false, true);
+}
+
+
+```
+
+###### hash()
+
+```
+static final int hash(Object key) {
+   int h;
+   return (key == null) ? 0 : (h = key.hashCode()) ^ (h >>> 16);
+}
+``
+
+
+####### key.hashCode()) ^ (h >>> 16)
+
+####### 右移16位
+
+######## 取int类型的一半
+
+####### 异或运算
+
+######## 打乱hashCode真正参与运算的低16位
+
+###### index
+
+```
+if ((tab = table) == null || (n = tab.length) == 0)
+   n = (tab = resize()).length;
+
+   // 通过 putVal 方法中的 (n - 1) & hash 决定该 Node 的存储位置
+   if ((p = tab[i = (n - 1) & hash]) == null)
+      tab[i] = newNode(hash, key, value, null);
+```
+
+
+####### (n-1) & hash
+
+####### 保证index总是在索引范围内
+
+####### n为2的次方，(n-1)的每一位都是1，保证数组每一位都能放入元素，保证均匀分布
+
+##### java8优化
+
+###### 扩容后保持链表顺序
+
+#### List
+
+##### Array to List
+
+###### int[] 转 List
+
+####### 不能直接 Arrays.asList
+
+####### 可用 Arrays.stream(int[]).boxed().collect()
+
+####### 或者用 Interger[]
+
+###### Arrays.asList 返回的是不可变集合！
+
+###### 对原始数组的修改会影响到 List
+
+##### List.subList 可能会很大！注意 OOM
+
+###### 可用Stream.skip / limit
+
+##### ArrayList vs. LinkedList
+
+###### ArrayList
+
+####### 随机访问快
+
+###### LinkedList
+
+####### 随机插入快 （理论上）
+
+######## 前提是先已获取到待插入的指针
+
+#### ConcurrentModificationException
+
+##### 作用
+
+###### 防止“结果不可预期行为”
+
+####### 删除当前游标之后的元素，遍历正常
+
+####### 删除当前游标之前的元素，会导致遍历遗漏！
+
+###### fail-fast
+
+####### 否则很难 debug
+
+##### 原理
+
+###### 每次增加删除元素，会 modCount++
+
+###### remove() / next() 中会检查 modCount == expectedModCount
+
+### compareTo
+
+#### 利用 Comparator.comparing().thenComparingInt().compare(x, y)
+
+#### equals, hashCode, compareTo 三者逻辑要一致
+
+### 数值
+
+#### 精度
+
+##### Double 四则运算会损失精度
+
+##### 用BigDecimal.valueOf()
+
+#### BigDecimal
+
+##### equals要考虑精度
+
+###### BigDecimal.value("1").equals(...1.0) 不等！
+
+###### 应该用 compareTo 来比较
+
+##### 所以作为 HashMap key要注意
+
+###### 改用 TreeMap
+
+####### TreeMap用的是compareTo
+
+###### 存入 BigDecimal 时，用 stripTrailingZeros 去掉末尾的0
+
+#### 格式化
+
+##### DecimalFormat
+
+###### setRoundingMode
+
+##### String.format 默认四舍五入
+
+### 文件
+
+#### FileReader
+
+##### read()
+
+###### 注意无法指定字符集
+
+###### 传入 byte[] 作为缓冲区
+
+#### Files
+
+##### readAllLines()
+
+###### --> List<String>
+
+###### 小心OOM
+
+##### lines()
+
+###### --> Stream
+
+###### 注意用 try-with-resource
+
+#### Guava Resources
+
+##### getResource
+
+###### --> URL
+
+### 日期
 
 ## 函数式编程
 
@@ -1071,84 +384,265 @@ https://mailinator.blogspot.com/2009/06/beautiful-race-condition.html
 
 ### 流 Stream
 
-#### 实现机制
+#### 基础
 
-##### 惰性求值方法
+##### 实现机制
 
-###### 返回Stream
+###### 惰性求值方法
 
-##### 及早求值方法
+####### 返回Stream
 
-###### 返回另一个值
+###### 及早求值方法
 
-#### 中间操作 Intermediate Operation
+####### 返回另一个值
+
+##### 性能提升
+
+###### 执行无状态中间操作时，只是创建一个Stage来标识用户的操作；最终由终结操作触发
+
+####### Stage的构成
+
+######## 数据来源
+
+######## 操作
+
+######## 回调函数
+
+###### 执行有状态中间操作时，需要等待迭代处理完所有的数据
+
+###### 并行处理
+
+####### 终结操作的实现方式与串行不一样
+
+####### 使用ForkJoin对stream处理进行分片
+
+####### 适用场景
+
+######## 多核、大数据量
+
+否则 常规迭代 性能更好，串行迭代次之
+
+
+#### 构造流
+
+##### Collection.stream()
+
+##### Stream.of(...)
+
+###### 传入多个元素构成一个流
+
+##### Stream.iterate().limit()
+
+```
+Stream.iterate(2, i -> i *2)
+  .limit(10)
+  .forEach();
+```
+
+###### 使用迭代方式构造无限流
+
+##### Stream.generate().limit()
+
+```
+Stream.generate(Math::random)
+  .limit()
+  .forEach();
+```
+
+###### 根据外部Supplier构造无限流
+
+##### IntStream / DoubleStream
+
+```
+IntStream.range(1, 3)
+  .mapToObj(x -> y);
+```
+
+#### 操作
+
+##### 中间操作 Intermediate Operation
 
 懒操作
 
 
-##### 无状态
+###### 无状态
 
-###### filter()
+####### filter()
 
-###### map()
+######## 过滤
 
-####### 转换：将Stream中的值转换成一个新的流
+####### map()
 
-###### flatMap()
+######## 转换：将Stream中的值转换成一个新的流
 
-####### 用Stream替换值，然后将多个Stream连接成一个Stream
+####### flatMap()
 
-###### peek()
+######## 将元素转换为Stream，然后将多个Stream连接成一个Stream
 
-##### 有状态
+####### peek()
 
-###### distinct()
+###### 有状态
 
-###### sorted()
+####### sorted() / reversed()
 
-###### limit()
+####### distinct()
 
-###### skip()
+####### limit()
 
-####  终结操作 Terminal Operation
+####### skip()
 
-##### 非短路操作
+######## 跳过前N个，实现类似分页效果
 
-###### forEach()
+#####  终结操作 Terminal Operation
 
-###### reduce
+###### 非短路操作
 
-####### 从一组值中生成一个值
+####### collect(toList())
 
-###### min / max(Comparator)
+######## 根据Stream里的值生成一个列表
 
-###### count()
+####### forEach()
 
-###### collect(toList())
+####### reduce
 
-####### 根据Stream里的值生成一个列表
+######## 从一组值中生成一个值
 
-##### 短路操作
+####### min / max(Comparator)
 
-###### anyMatch() / allMatch() / noneMatch()
+######## Entry.comparingByValue().reversed()
 
-###### findFirst() / findAny()
+####### count()
+
+###### 短路操作
+
+####### anyMatch() / allMatch() / noneMatch()
+
+####### findFirst() / findAny()
 
 #### Collectors
 
 ##### 原生方法
 
-###### 转成其他收集器：toCollection(TreeSet::new)
+###### toCollection(TreeSet::new)
 
-###### 统计信息：maxBy, averagingInt
+####### 转成其他收集器
 
-###### 数据分块：partitionBy
+###### maxBy, averagingInt，summingInt
 
-###### 数据分组：groupingBy
+####### 统计信息
 
-###### 拼接字符串：joining(分隔符，前缀，后缀)
+###### groupingBy
 
-###### 定制：reducing(identity, mapper, op)
+```
+//1.按照用户名分组，统计下单数量
+orders.stream().collect(
+  groupingBy(
+    Order::getCustomerName,
+    counting()))
+    
+  .entrySet().stream()
+  .sorted(Entry.comparingByValue().reversed())
+  .collect(toList()));
+
+//2.按照用户名分组，统计订单总金额
+orders.stream().collect(
+  groupingBy(
+    Order::getCustomerName,
+    summingDouble(
+Order::getTotalPrice)))
+      
+  .entrySet().stream()
+  .sorted(Entry.comparingByValue().reversed())
+  .collect(toList()));
+
+//3.按照用户名分组，统计商品采购数量
+orders.stream().collect(
+  groupingBy(
+    Order::getCustomerName,
+
+    summingInt(order -> order.getOrderItemList()
+     .stream()
+     .collect(summingInt(
+  OrderItem::getProductQuantity)))))
+  .entrySet().stream()
+  .sorted(Entry.comparingByValue().reversed())
+  .collect(toList()));
+
+//4.统计最受欢迎的商品，倒序后取第一个
+orders.stream()
+  .flatMap(order -> order.getOrderItemList().stream()).collect(
+
+ groupingBy(
+  OrderItem::getProductName, 
+  summingInt(OrderItem::getProductQuantity)))
+
+ .entrySet().stream()
+ .sorted(Entry.comparingByValue().reversed())
+ .map(Map.Entry::getKey)
+ .findFirst()
+ .ifPresent(System.out::println);
+
+//4.统计最受欢迎的商品的另一种方式，直接利用maxBy
+orders.stream()
+  .flatMap(order -> order.getOrderItemList().stream()).collect(
+
+ groupingBy(
+  OrderItem::getProductName,
+  summingInt(OrderItem::getProductQuantity)))
+ .entrySet().stream()
+ .collect(
+  maxBy(Entry.comparingByValue()))
+ .map(Map.Entry::getKey)
+ .ifPresent(System.out::println);
+
+//5.按照用户名分组，选用户下的总金额最大的订单
+orders.stream().collect(
+  groupingBy(
+    Order::getCustomerName,
+    collectingAndThen(
+     maxBy(
+      comparingDouble(
+      Order::getTotalPrice)), Optional::get)))
+
+ .forEach((k, v) -> System.out.println(k + "#" + v.getTotalPrice() + "@" + v.getPlacedAt()));
+
+//6.根据下单年月分组，统计订单ID列表
+orders.stream().collect(
+  groupingBy(
+    order -> order.getPlacedAt().format(DateTimeFormatter.ofPattern("yyyyMM")),
+    mapping(order -> order.getId(), toList()))));
+
+//7.根据下单年月+用户名两次分组，统计订单ID列表
+orders.stream().collect(
+  groupingBy(order -> order.getPlacedAt().format(DateTimeFormatter.ofPattern("yyyyMM")),
+    groupingBy(o
+      rder -> order.getCustomerName(),
+      mapping(order -> order.getId(), toList())))));
+
+```
+
+####### 数据分组
+
+###### partitionBy
+
+```
+//根据是否有下单记录进行分区
+Customer.getData().stream()
+ .collect(
+    partitioningBy(
+      customer -> orders.stream().mapToLong(Order::getCustomerId)
+      .anyMatch(id -> id == customer.getId()))));
+```
+
+####### 数据分区：分 true/false两组
+
+###### joining(分隔符，前缀，后缀)
+
+####### 拼接字符串
+
+###### reducing(identity, mapper, op)
+
+####### 定制
 
 ##### 自定义收集器
 
@@ -1160,74 +654,47 @@ https://mailinator.blogspot.com/2009/06/beautiful-race-condition.html
 
 ###### finisher() -> Function，转换，返回最终结果
 
-#### 并行流
+### 并行流
 
-##### 创建
+#### 创建
 
-###### Collection.parallelStream()
+##### Collection.parallelStream()
 
-###### Stream.parallel()
+##### Stream.parallel()
 
-##### 实现
+#### 实现
 
-###### 使用ForkJoinPool
+##### 使用ForkJoinPool
 
-##### 场景
+#### 场景
 
-###### 数据量越大，每个元素处理时间越长，并行就越有意义
+##### 数据量越大，每个元素处理时间越长，并行就越有意义
 
-###### 数据结构要易于分解
+##### 数据结构要易于分解
 
-####### 好：ArrayList, IntStream
+###### 好：ArrayList, IntStream
 
-####### 一般：HashSet，TreeSet
+###### 一般：HashSet，TreeSet
 
-####### 差：LinkedList，Streams.iterate，BufferedReader.lines
+###### 差：LinkedList，Streams.iterate，BufferedReader.lines
 
-###### 避开有状态操作
+##### 避开有状态操作
 
-####### 无状态：map，filter，flatMap
+###### 无状态：map，filter，flatMap
 
-####### 有状态：sorted，distinct，limit
+###### 有状态：sorted，distinct，limit
 
-##### Arrays提供的并行操作
+#### Arrays提供的并行操作
 
-###### Arrays.parallelSetAll
+##### Arrays.parallelSetAll
 
-####### 并行设置value
+###### 并行设置value
 
-###### Arrays.parallelPrefix
+##### Arrays.parallelPrefix
 
-####### 将每一个元素替换为当前元素与前驱元素之和
+###### 将每一个元素替换为当前元素与前驱元素之和
 
-###### Arrays.parallelSort
-
-#### 性能提升
-
-##### 执行无状态中间操作时，只是创建一个Stage来标识用户的操作；最终由终结操作触发
-
-###### Stage的构成
-
-####### 数据来源
-
-####### 操作
-
-####### 回调函数
-
-##### 执行有状态中间操作时，需要等待迭代处理完所有的数据
-
-##### 并行处理
-
-###### 终结操作的实现方式与串行不一样
-
-###### 使用ForkJoin对stream处理进行分片
-
-###### 适用场景
-
-####### 多核、大数据量
-
-否则 常规迭代 性能更好，串行迭代次之
-
+##### Arrays.parallelSort
 
 ### 工具
 
@@ -1269,7 +736,7 @@ https://mailinator.blogspot.com/2009/06/beautiful-race-condition.html
 
 #### 封装：log.debug(Suppiler)
 
-```java
+```
 // AS-IS
 if (logger.isDebugEnabled()) {
   logger.debug("...");
@@ -1287,7 +754,7 @@ public void debug(Supplier msg) {
 
 #### 孤独的覆盖：ThreadLocal.withInitial(Supplier)
 
-```java
+```
 // AS-IS
 new ThreadLocal<Object>() {
   @Override
@@ -1303,7 +770,7 @@ ThreadLocal.withInitial(() -> db.get());
 #### 重复：传入ToLongFunction
 
 例如遍历订单中的item详情数目
-```java
+```
 public long count(ToLongFunction<Order> fun) {
   return orders.stream()
     .mapToLong(fun)
@@ -1325,105 +792,13 @@ public long countAmount() {
 #### peek()
 
 peek()让你能查看每个值，同时能继续操作流。
-```java
+​```java
 album.getMusicians()
   .filter(...)
   .map(...)
   .peek(item -> System.out.println(item))
   .collect(Collectors.toSet());
 ```
-
-## 网络编程
-
-### Netty
-
-#### 通讯方式
-
-##### BIO: 同步阻塞
-
-##### NIO: 同步非阻塞
-
-##### AIO: 异步非阻塞
-
-#### 原理
-
-##### EventLoop
-
-###### 类似Reactor
-
-###### 负责监听网络事件，并调用事件处理器进行处理
-
-##### EventLoopGroup
-
-###### bossGroup
-
-####### 处理连接请求
-
-###### workerGroup
-
-####### 处理读写请求
-
-### Tomcat
-
-#### 配置
-
-##### acceptCount:100
-
-accept队列的长度；默认值是100。
-
-- 类比取号。
-- 若超过，进来的连接请求一律被拒绝。
-
-- acceptCount的设置，与应用在连接过高情况下希望做出什么反应有关系。如果设置过大，后面进入的请求等待时间会很长；如果设置过小，后面进入的请求立马返回connection refused。
-
-##### maxConnections
-
-Tomcat在任意时刻接收和处理的最大连接数。-1表示不受限制。
-
-BIO: =maxThreads
-NIO: 10000
-
-- 类比买票
-
-- 当接收的连接数达到maxConnections时，Acceptor线程不会读取accept队列中的连接；这时accept队列中的线程会一直阻塞着。
-
-
-
-##### maxThreads: 200
-
-请求处理线程的最大数量。默认200。
-
-- 类比观影
-
-### nginx
-
-#### 应用场景
-
-##### 静态资源服务
-
-##### 反向代理服务
-
-##### API服务 -OpenResty
-
-#### tips
-
-##### `cp -r contrib/vim/* ~/.vim` 将vim语法高亮
-
-## NIO
-
-http://ifeve.com/java-nio-all/
-
-### 核心概念
-
-#### Channel
-
-#### Buffer
-
-#### Selector
-
-##### 用来检测Channel上的IO事件；例如连接就绪、读就绪
-
-##### 循环调用 SelectionKey select()
 
 ## 性能调优
 
@@ -1439,6 +814,75 @@ http://ifeve.com/java-nio-all/
 
 ##### 负载承受能力：抛错的极限
 
+#### 微基准测试 JMH
+
+https://sq.163yun.com/blog/article/179671960481783808
+
+​	
+
+##### 介绍
+
+http://openjdk.java.net/projects/code-tools/jmh/
+
+
+
+##### 范例
+
+http://hg.openjdk.java.net/code-tools/jmh/file/3769055ad883/jmh-samples/src/main/java/org/openjdk/jmh/samples
+
+##### 避免JVM过度优化
+
+###### 预热
+
+###### 防止无效代码消除：Blackhole.consume()
+
+Dead Code Elimination
+
+```java
+
+public void testMethod() {
+   int left = 10;
+   int right = 100;
+   int mul = left * right;
+}
+
+
+
+public void testMethod(Blackhole blackhole) {
+   // …
+   blackhole.consume(mul);
+}
+
+```
+
+###### 防止常量折叠：State机制
+
+Constant Folding
+
+```java
+@State(Scope.Thread)
+public static class MyState {
+   public int left = 10;
+   public int right = 100;
+}
+
+public void testMethod(MyState state, Blackhole blackhole) {
+   int left = state.left;
+   int right = state.right;
+   int mul = left * right;
+   blackhole.consume(mul);
+}
+
+```
+
+##### 可视化
+
+
+http://deepoove.com/jmh-visual-chart/ 
+
+http://jmh.morethan.io/
+
+
 ### Java调优
 
 #### String
@@ -1451,6 +895,8 @@ http://ifeve.com/java-nio-all/
 
 注意：
 - 常量池是类似一个HashTable，如果过大会增加整个字符串常量池的负担。
+
+###### 但回收可能会不及时？
 
 #### 正则表达式
 
@@ -1531,13 +977,206 @@ http://ifeve.com/java-nio-all/
 
 #### 用Stream遍历集合
 
+##### 惰性求值
+
+##### 并行处理
+
+##### 适合迭代次数较多时、多核时
+
+#### IO
+
+##### 传统IO的问题
+
+###### 多次内存复制
+
+####### 内核缓存 <--> 用户控件穿冲
+
+###### 阻塞
+
+###### 面向流
+
+##### NIO
+
+###### 面向Buffe，使用缓冲区优化读写流操作
+
+###### 使用DirectBuffer减少内存复制
+
+###### 避免阻塞
+
+#### 序列化
+
+##### Java序列化
+
+###### 概念
+
+####### 实现Serializable
+
+serialVersionUID 用于区分不同版本
+
+####### ObjectInputStream 序列化，ObjectOutputStream 反序列化
+
+####### writeObject(), readObject() 可以自定义序列化机制
+
+####### writeReplace(), readResolve() 可以在序列化前、反序列化后处理对象
+
+###### 缺点
+
+####### 无法跨语言
+
+####### 易被攻击
+
+######## 解决：仅支持基本类型和数组类型
+
+####### 序列化后的流太大
+
+####### 序列化性能差
+
+##### Protobuf序列化
+
+###### Protocol Buffers：TLV格式
+
+####### Tag + Length + Value
+
+###### 推荐！
+
+##### Kyro序列化
+
+##### Json序列化
+
+###### SpringCloud
+
+##### Hessian序列化
+
+###### Dubbo
+
+#### RPC
+
+##### 通信协议
+
+###### TCP / UDP
+
+##### 长连接
+
+##### 非阻塞、零拷贝
+
+###### Netty
+
 ### 多线程调优
+
+#### 锁
+
+##### 锁的升级
+
+##### 锁消除、锁粗化
+
+##### 减少锁的粒度
+
+例如 ConcurrentHashMap
+
+
+##### 乐观锁：CAS --> LongAdder
+
+#### 减少上下文切换
+
+##### 上下文：线程切出切入过程中，OS需要保存和恢复的进度信息
+
+##### 线程池并非越大越好
+
+##### 减少锁的持有时间
+
+###### 减少加锁代码块的范围
+
+##### 降低锁的粒度
+
+###### 读写锁
+
+###### 分段锁
+
+##### 乐观锁
+
+###### volatile
+
+###### CAS
+
+##### 执行notify之后，应该尽快释放锁
 
 ### JVM调优
 
 ### 设计模式调优
 
 ### 数据库调优
+
+## 坑
+
+### oop
+
+#### Interger对比
+
+##### 要用equals，不能用 ==
+
+##### IntegerCache 缓存了 -128 ~ 127
+
+#### 浮点数对比
+
+##### 不能用 ==，也不能用 equals !!!
+
+##### 推荐
+
+###### 比较差值
+
+###### 转成BigDecimal，再用equals
+
+###### 用 compareTo ?
+
+#### new BigDecimal(double) 精度损失
+
+##### 用 new BigDecimal(String)
+
+##### 用 BigDecimal.valueOf()
+
+### 集合
+
+#### Collection.toArray()
+
+##### 不建议用无参构造函数
+
+##### 建议 c.toArray(c)
+
+#### Arrays.asList()
+
+##### 返回的是 Immutable
+
+#### Map null 值
+
+##### HashMap 支持null key / null value
+
+##### ConcurrentHashMap 、 Hashtable 不支持 null !!
+
+##### TreeMap 只支持 null value
+
+#### Map 遍历
+
+##### entrySet()
+
+##### Map.forEach
+
+### 泛型
+
+#### <? extends T> 接收数据后，不可再 add
+
+#### <? super T> 接收数据后，不可再 get
+
+### 异常
+
+#### NoSuchMethodException
+
+##### 通过反射，找不到方法
+
+#### NoSuchMethodError
+
+##### jar类冲突时，可能引入非预期的版本使得方法签名不匹配
+
+##### 或者字节码修改框架（ASM）动态创建或修改类时，修改了方法签名
 
 ## 例题
 
@@ -1592,9 +1231,12 @@ http://ifeve.com/java-nio-all/
 ###### 哈希计算：(key == null) ? 0 : (h = key.hashCode()) ^ (h >>> 16)
 
 为什么这里需要将高位数据移位到低位进行异或运算呢？
+
 这是因为有些数据计算出的哈希值差异主要在高位，而 HashMap 里的哈希寻址是忽略容量以上的高位的，那么这种处理就可以有效避免类似情况下的哈希碰撞。
 
-###### entry index算法：(n - 1) & hash
+###### entry index算法： hash & (n - 1)
+
+####### n 取为2的次方
 
 ###### resize
 
@@ -1630,21 +1272,24 @@ http://ifeve.com/java-nio-all/
 
 ######## get()
 
-```java
+```
 public V get(Object key) {
-        Segment<K,V> s; // manually integrate access methods to reduce overhead
-        HashEntry<K,V>[] tab;
-        int h = hash(key.hashCode());
-       // 利用位操作替换普通数学运算
-       long u = (((h >>> segmentShift) & segmentMask) << SSHIFT) + SBASE;
-        // 以 Segment 为单位，进行定位
-        // 利用 Unsafe 直接进行 volatile access
-        if ((s = (Segment<K,V>)UNSAFE.getObjectVolatile(segments, u)) != null &&
-            (tab = s.table) != null) {
+  Segment<K,V> s; // manually integrate access methods to reduce overhead
+  
+  HashEntry<K,V>[] tab;
+  int h = hash(key.hashCode());
+       
+  // 利用位操作替换普通数学运算
+  long u = (((h >>> segmentShift) & segmentMask) << SSHIFT) + SBASE;
+   
+   // 以 Segment 为单位，进行定位
+   // 利用 Unsafe 直接进行 volatile access
+   if ((s = (Segment<K,V>)UNSAFE.getObjectVolatile(segments, u)) != null &&
+   (tab = s.table) != null) {
            // 省略
-          }
-        return null;
-    }
+   }
+   return null;
+}
 
 ```
 
@@ -1654,11 +1299,12 @@ public V get(Object key) {
 
 ######## put()
 
-```java
+```
 public V put(K key, V value) {
   Segment<K,V> s;
   // 二次哈希，以保证数据的分散性，避免哈希冲突
   int hash = hash(key.hashCode());
+  
   int j = (hash >>> segmentShift) & segmentMask;
   if ((s = (Segment<K,V>)UNSAFE.getObject   // nonvolatile; recheck
   (segments, (j << SSHIFT) + SBASE)) == null) //  in ensureSegment
@@ -1671,6 +1317,7 @@ final V put(K key, int hash, V value, boolean onlyIfAbsent) {
   // scanAndLockForPut 会去查找是否有 key 相同 Node
   // 无论如何，确保获取锁
   HashEntry<K,V> node = tryLock() ? null : scanAndLockForPut(key, hash, value);
+  
   V oldValue;
   HashEntry<K,V>[] tab = table;
   int index = (tab.length - 1) & hash;
